# fracture-pt

./: .containerignore  .env.example  .env.prod.example  .gitignore  .semgrepignore  ARCHITECTURE.md  AUDIT-REPORT.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.dev  Containerfile.prod  FILE-UPLOAD-DESIGN.md  MANUAL-TEST-PLAN.md  MARKETING_SEO.md  README.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT_RESULTS.md  TEST_STRATEGY.md  UX_DESIGN.md  compose.prod.yaml  compose.yaml  compose.zitadel.yaml
.github/: dependabot.yml
.github/workflows/: release-sidecars.yaml  release.yaml  rust.yml
assets/: i18n-shared.ftl
assets/i18n/: i18n-shared.ftl
assets/i18n/de-DE/: main.ftl
assets/i18n/en-GB/: main.ftl
assets/static/: 404.html  app.css  app.js  bulk-select.js  md-editor.js  network-map.js  robots.txt  scope-wizard.js  sitemap.xml  table-sort.js  upload.js
assets/views/: _layout.html  base.html  public_base.html
assets/views/about/: index.html
assets/views/admin/: orgs.html
assets/views/admin/engagement/: list.html  show.html
assets/views/admin/finding/: list.html  show.html
assets/views/admin/invoice/: list.html
assets/views/admin/non_finding/: list.html
assets/views/admin/report/: list.html
assets/views/admin/scan_target/: list.html
assets/views/admin/subscription/: list.html
assets/views/admin/user/: list.html  show.html
assets/views/asm/: free-scan-progress.html  free-scan.html  results.html
assets/views/blog/: public_index.html  public_show.html
assets/views/contact/: index.html  success.html
assets/views/engagement/: list.html  report.html  request.html  show.html
assets/views/engagement/finding/: create.html  edit.html
assets/views/engagement/non_finding/: create.html  edit.html
assets/views/finding/: list.html  show.html
assets/views/home/: index.html
assets/views/incident-response/: index.html
assets/views/invoice/: list.html
assets/views/jobs/: org_run_show.html
assets/views/legal/: imprint.html  privacy.html  terms.html
assets/views/org/: invite_accept.html  list.html  members.html  new.html  settings.html
assets/views/pentester/engagement/: list.html  report.html  show.html
assets/views/pentester/finding/: create.html  edit.html
assets/views/pentester/non_finding/: create.html  edit.html
assets/views/pricing/: index.html
assets/views/report/: list.html  show.html
assets/views/scan_job/: list.html  show.html
assets/views/scan_target/: create.html  list.html  show.html
assets/views/scope/: wizard.html
assets/views/service/: list.html  show.html
assets/views/subscription/: list.html
config/: development.yaml  production.yaml  test.yaml
containers/tools/amass/: Containerfile
containers/tools/nmap/: Containerfile
deploy/: nginx-gethacked.conf
dev/: Dockerfile.ci  build-docbuilder.sh  build-tools.sh  ci.sh  entrypoint-prod.sh  entrypoint.sh  setup.sh
dev/keycloak/import/: staff-realm.json  tenant-acme-realm.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SCAN_AUTHZ.md  TESTING.md  USE_CASES.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260310_000001_create_services.rs  m20260310_000002_create_pricing_tiers.rs  m20260310_000003_create_subscriptions.rs  m20260310_000004_create_scan_targets.rs  m20260310_000005_create_engagements.rs  m20260310_000006_create_engagement_offers.rs  m20260310_000007_create_pentester_assignments.rs  m20260310_000008_create_scan_jobs.rs  m20260310_000009_create_findings.rs  m20260310_000010_create_reports.rs  m20260310_000011_create_invoices.rs  m20260310_000012_seed_admin_org.rs  m20260403_000001_add_job_run_id_to_findings.rs  m20260403_000002_create_non_findings.rs  m20260403_000003_create_engagement_targets.rs  m20260407_000001_create_engagement_comments.rs  m20260410_000001_add_query_indexes.rs  m20260701_000001_create_finding_comments.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  contact.rs  engagement.rs  fallback.rs  finding.rs  free_scan.rs  home.rs  invoice.rs  mod.rs  org_settings.rs  pages.rs  report.rs  scan_job.rs  scan_target.rs  service.rs  subscription.rs  uploads.rs
src/controllers/admin/: engagement.rs  finding.rs  invoice.rs  mod.rs  non_finding.rs  report.rs  scan_target.rs  subscription.rs  user.rs
src/controllers/api/: mod.rs
src/controllers/pentester/: engagement.rs  mod.rs
src/initializers/: mod.rs  security_headers.rs  sqlite_pragmas.rs  view_engine.rs
src/jobs/: amass.rs  asm_scan.rs  ip_enum.rs  mod.rs  port_scan.rs  report_build.rs
src/mailers/: mod.rs  scan_alert.rs
src/mailers/scan_alert/scan_alert/: html.t  subject.t  text.t
src/models/: auth.rs  engagement_comments.rs  engagement_offers.rs  engagement_targets.rs  engagements.rs  finding_comments.rs  findings.rs  invoices.rs  mod.rs  non_findings.rs  pentester_assignments.rs  pricing_tiers.rs  reports.rs  scan_jobs.rs  scan_targets.rs  services.rs  subscriptions.rs
src/models/_entities/: engagement_comments.rs  engagement_offers.rs  engagement_targets.rs  engagements.rs  finding_comments.rs  findings.rs  invoices.rs  mod.rs  non_findings.rs  pentester_assignments.rs  prelude.rs  pricing_tiers.rs  reports.rs  scan_jobs.rs  scan_targets.rs  services.rs  subscriptions.rs
src/services/: amass.rs  asm.rs  ip_enum.rs  markdown.rs  mod.rs  pipeline.rs  port_scan.rs  report_builder.rs  scan_authz.rs  tier.rs  tool_runner.rs
src/views/: engagement.rs  finding.rs  free_scan.rs  home.rs  invoice.rs  mod.rs  pages.rs  report.rs  scan_job.rs  scan_target.rs  service.rs  subscription.rs
src/views/admin/: engagement.rs  finding.rs  invoice.rs  mod.rs  non_finding.rs  report.rs  scan_target.rs  subscription.rs  user.rs
src/views/pentester/: engagement.rs
src/workers/: asm_scan.rs  job_dispatcher.rs  job_scheduler.rs  mod.rs
tests/: mod.rs
tests/models/: engagement_offers.rs  engagements.rs  findings.rs  mod.rs  pentester_assignments.rs  pricing_tiers.rs  reports.rs  services.rs  subscriptions.rs
tests/requests/: authorization.rs  mod.rs  pages.rs  pentest_workflow.rs
tests/services/: job_dispatcher_claim.rs  mod.rs  scan_authz.rs
