[workspace]
members = [".", "migration"]

[package]
name = "fracture-pt"
description = "Penetration testing platform built on fracture-core"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
default-run = "fracture-pt-cli"

[workspace.dependencies]
loco-rs = { version = "0.16" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.50", default-features = false, features = [
  "rt-multi-thread",
  "net",
  "process",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
migration = { path = "migration" }
# Pinned to CMS PR #71's tip until that PR merges and dependabot bumps it.
# After CMS #71 lands, restore this to the unpinned form so dependabot tracks main again.
fracture-core = { git = "https://github.com/Sp0Q1/fracture-cms", rev = "3d08d8321716e0911456db8274c1ccccb5366426" }
sea-orm = { workspace = true }
chrono = { version = "0.4" }
zip = { version = "8", default-features = false, features = ["deflate"] }
comrak = { version = "0.52", default-features = false }
uuid = { version = "1.22", features = ["v4"] }
fluent-templates = { version = "0.13", features = ["tera"] }
tera = { version = "1" }
unic-langid = { version = "0.9" }
axum-extra = { version = "0.12", features = ["form", "cookie"] }
slug = { version = "0.1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
include_dir = { version = "0.7", features = ["glob"] }
form_urlencoded = "1.2.2"

[[bin]]
name = "fracture-pt-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.4" }
rstest = { version = "0.26" }
insta = { version = "1.46", features = ["redactions", "yaml", "filters"] }

# ---------------------------------------------------------------------------
# Build profiles — see https://doc.rust-lang.org/cargo/reference/profiles.html
# ---------------------------------------------------------------------------

[profile.dev]
# line-tables-only: backtraces still work, but debug info is much smaller
# (~40% reduction), faster linking, smaller target/ directory.
debug = "line-tables-only"
# incremental is already true by default for dev, just being explicit.
incremental = true

[profile.dev.package."*"]
# Optimize all dependencies (they compile once and get cached).
# opt-level 2 makes serde, crypto, compression, parsing, etc. dramatically
# faster at runtime with minimal compile-time cost (cached by cargo-chef).
opt-level = 2

[profile.release]
# Thin LTO: good balance of binary size/speed improvement vs compile time.
lto = "thin"
# Single codegen unit for maximum optimization.
codegen-units = 1
# Strip debug info from the release binary (~50% smaller).
strip = "debuginfo"
