[package]
name = "migration"
description = "Database migrations for gethacked"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
loco-rs = { workspace = true }
fracture-core-migration = { git = "https://github.com/Sp0Q1/fracture-cms", rev = "cdd4062fa2d758584a355c70d68add4be1f551b1" }
sea-orm = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dependencies.sea-orm-migration]
version = "1.1"
features = [
  "runtime-tokio-rustls",
]
